KSENROLL-14129: fixing spacing of card badge and waitlist icon in Registration
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@74074 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/waitlisted.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/waitlisted.less
@@ -11,5 +11,5 @@
 .kscr-Waitlisted-clockIcon{
     color: @primaryTextColor;
     .font-size(13);
-    margin-left: 0.5rem;
+    margin-left: 1rem;
 }
